# schwung

./: .gitignore  BUILDING.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANUAL.md  README.md  module-catalog.json  release.json
.github/workflows/: ci.yml  pages.yml  release.yml  update-module-catalog.yml
.serena/: project.yml
docs/: ADDRESSING_MOVE_SYNTHS.md  API.md  ARCHITECTURE.md  COLLECTING-DIAGNOSTICS.md  CORUN.md  FORKING.md  GAIN_STAGING_ANALYSIS.md  LINK_AUDIO_WIRE_FORMAT.md  LOGGING.md  MIDI_INJECTION.md  MODULES.md  REALTIME_SAFETY.md  SPI_PROTOCOL.md  index.html  link-audio-crackle-followup.md  release-notes-next.md  tracing.md  tts-architecture.md  tts-config.md
recon/: dbus-system-conf.txt
schwung-manager/: .gitignore  audio_capture.go  display_overlay.go  go.sum  main.go  mdns.go  module_config.go  release_json_test.go  remote_ui.go  repair_status.go  self_heal.go  shmconfig.go  shmparams.go  shmwebring.go  templates_test.go
scripts/: build-libsamplerate.sh  build-mac.sh  build.sh  collect-diagnostics.sh  fix-ssh.sh  generate_font.py  generate_module_table.py  install-hooks.sh  install.sh  package.sh  post-update.sh  uninstall.sh
scripts/dev/: README.md  (+4 more)
src/: launch-standalone.sh  move_anything.c  move_anything_shim.c  schwung-heal.c  schwung_host.c  schwung_shim.c  shim-entrypoint.sh
tools/pytest-schwung/: .gitignore  README.md  pyproject.toml
tools/pytest-schwung/src/schwung_bus/: __init__.py  client.py  device_files.py  pristine_constants.py  pytest_plugin.py
tools/pytest-schwung/tests/: test_midi_out_capture.py  test_note_validators.py
(+253 files in other folders)
